umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_scifinder_Substance_20250901_1113.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 22
bond_count: 22
sum_formula: C13O9
graph6: "UsO`?_OA?O?_@??C???????O??G??O?@G??A??CW"
