umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_wolfram_caffeine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 25
sum_formula: C8H10N4O2
graph6: WhGGGCH?GG?@OA??o?C??_??@???_??_??O??@???G???_?
