umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_oechem_17346034.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 43
bond_count: 46
sum_formula: C40FeP2
graph6: jACga@?A?G?B?O?G?G?@?G??_???C??A???_??C???D???I???_???O???C????_??A????C????O????G??????G????@?????C?????G?????I?????D????????????@??????G??????O??????W
