umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_oechem_riboflavin.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 47
bond_count: 49
sum_formula: C17H20N4O6
graph6: "n???????C??POAG?_O?D??OG??_A?__A???C??A???@`A?O???G???A?e????O???@????C????C????A?????C?????O????A?????A??_?????O?????C?????????C??????_?????A??????A??????A??????@????C??????_???????"
